tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_quote_code_fragments/execute__tests__noirc_frontend_tests_quote_code_fragments_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Assertion failed
  ┌─ src/main.nr:4:52
  │
4 │                 concat!(quote { assert( }, quote { false); });
  │                                                    -----
  │

Aborting due to 1 previous error
