tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_quote_code_fragments/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Assertion failed
  ┌─ src/main.nr:4:52
  │
4 │                 concat!(quote { assert( }, quote { false); });
  │                                                    -----
  │

Aborting due to 1 previous error
